# OpenPANDA

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-test.yaml
cmake/: FindSai2.cmake
include/robot/: panda_controller.hpp
include/sai2/: control.hpp  simulation.hpp
include/utils/: sharedmemory.hpp  trajectory_manager.hpp
model/: panda_arm.urdf  world.urdf
src/: main.cpp
src/robot/: panda_controller.cpp
src/sai2/: control.cpp  simulation.cpp
src/utils/: trajectory_manager.tpp
